<resources>
    <!--weather activity-->
    <string name="tempChoose">Choose Your Temperature</string>
    <string name="checkedIDF">You chose Fahrenheit</string>
    <string name="checkedIDC">You chose Celsius</string>
    <string name="checkedIDK">You chose Kelvin</string>
    <string name="tempToastF">It\'s very hot</string>
    <string name="tempToastC">This is quite comfortable</string>
    <string name="tempToastK">It\'s freezing</string>
    <string name="weatherError1">Please enter a value</string>
    <string name="weatherError2">Please select a unit</string>
    <string name="degF">°Fahrenheit</string>
    <string name="degC">°Celsius</string>
    <string name="degK">Kelvin</string>
    <string name="btnTempEnter">Calculate</string>
    <string name="enterTemp">Enter the temperature and starting unit</string>
    <string name="tempInputHint">Enter the temperature</string>
    <string name="tempOutputF"> °F</string>
    <string name="tempOutputC"> °C</string>
    <string name="tempOutputK"> K</string>
    <!--Main menu activity-->
    <string name="Welcome">Welcome to Zach\'s App</string>
    <string name="goWeather">Convert Temp</string>
    <string name="goTicTacToe">Tic Tac Toe</string>
    <string name="goInfo">Info</string>
    <string name="goMusic">Favorite Song</string>
    <string name="goTakePic">Take Picture</string>
    <string name="goDraw">My Drawing</string>
    <string name="mainMenu">Main Menu</string>
    <!--Tic tact to activity-->
    <string name="message_label">Player X\'s turn</string>
    <string name="message_label2">Player O\'s turn</string>
    <string name="new_game_button">New Game</string>
    <!--InfoPage Activity-->
    <string name="informationTitle">Your Information</string>
    <string name="favoriteSeason">What is your favorite season?</string>
    <string name="favoriteTemp">What is your favorite temperature?</string>
    <string name="allergies">Do you have allergies?</string>
    <string-array name="seasons">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
    <!--Generic strings-->
    <string name="app_name">Zach\'s Lab</string>
    <string name="toastAction">Error</string>
    <string name="construction">Under Construction!</string>
    <string name="exit">Exit</string>
    <string name="test">Test</string>
    <string name="taken_square">That square is taken. Try again.</string>
</resources>